@@ -4,7 +4,7 @@ Maintainer: Steven E. Pav <shabbychef@gmail.com>
 Authors@R: c(person(c("Steven", "E."), "Pav", role=c("aut","cre"), 
     email="shabbychef@gmail.com"))
 Version: 0.1.0
-Date: 2016-04-06
+Date: 2016-04-07
 License: LGPL-3
 Title: Baumgartner Weiss Schindler Test of Equal Distributions
 BugReports: https://github.com/shabbychef/BWStest/issues
@@ -19,6 +19,6 @@ Suggests:
 RoxygenNote: 5.0.1
 URL: https://github.com/shabbychef/BWStest
 Collate:
+    'bws_test.r'
     'BWStest.r'
-    'hyptest.r'
     'RcppExports.R'
