@@ -21,7 +21,14 @@
 #' 
 #' @section Background:
 #'
-#' more here...
+#' The Baumgartner Weiss Schindler test is a two sample test of the null 
+#' that the samples come from the same probability distribution, similar
+#' to the Kolmogorv-Smirnov, Wilcoxon, and Cramer-Von Mises tests. It is
+#' similar to the Cramer-Von Mises test in that it estimates the
+#' square norm of the difference in CDFs of the two samples. However, the
+#' Baumgartner Weiss Schindler test weights the integral by the variance
+#' of the difference in CDFs, "[emphasizing] the tails of the distributions,
+#' which increases the power of the test for a lot of applications."
 #'
 #' @section Legal Mumbo Jumbo:
 #'
@@ -32,6 +39,7 @@
 #'
 #' @template etc
 #' @template ref-bws
+#' @template ref-modtests
 #' @name BWStest-package
 #' @rdname BWStest-package
 #' @docType package
@@ -54,9 +62,14 @@ NULL
 #' \newcommand{\cranBWStest}{\CRANpkg{BWStest}}
 #' \newcommand{\BWStest}{\href{https://github.com/shabbychef/BWStest}}
 #'
-#' @section \BWStest{} Initial Version 0.1.0 (2016-04-06) :
+#' @section \BWStest{} Initial Version 0.1.0 (2016-04-07) :
 #' \itemize{
-#' \item start work
+#' \item First CRAN release.
+#' }
+#'
+#' @section \BWStest{} Initial Version 0.0.0 (2016-04-06) :
+#' \itemize{
+#' \item Start work
 #' }
 #'
 #' @name BWStest-NEWS
