@@ -44,7 +44,7 @@ library(microbenchmark)
 ![RCpp](https://img.shields.io/badge/RCpp-inside-blue.svg)
 
 Performs the [Baumgartner-Weiß-Schindler 2-sample test](http://doai.io/10.2307/2533862) of equal probability
-distributions. Will eventually support the modified one-sided tests.
+distributions. 
 
 -- Steven E. Pav, shabbychef@gmail.com
 
@@ -80,4 +80,10 @@ print(ph)
 ```
 
 Looks good to me!
+
+## Future work
+
+Eventually the package will support the modified tests proposed by 
+[Neuhauser](http://doai.io/10.1007/BF02762032) and 
+[Murakami](http://doai.io/10.1080/00949655.2010.551516).
 
