@@ -1,19 +1,15 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/hyptest.r
+% Please edit documentation in R/bws_test.r
 \name{bws_test}
 \alias{bws_test}
 \title{Perform the Baumgartner-Weiss-Schindler hypothesis test.}
 \usage{
-bws_test(x, y, alternative = c("two.sided", "greater", "less"))
+bws_test(x, y)
 }
 \arguments{
 \item{x}{a vector of the first sample.}
 
 \item{y}{a vector of the first sample.}
-
-\item{alternative}{a character string specifying the alternative hypothesis,
-must be one of \code{"two.sided"} (default) \code{"greater"} or
-\code{"less"}.  You can specify just the initial letter. (NYI)}
 }
 \value{
 Object of class \code{htest}, a list of the test statistic,
@@ -21,6 +17,10 @@ the p-value, and the \code{method} noted.
 }
 \description{
 Perform the Baumgartner-Weiss-Schindler hypothesis test.
+}
+\note{
+Eventually this will support the one-sided tests of
+Neuhauser and Murakami.
 }
 \examples{
 
